.. $Id: RELEASE_NOTES  79391 2011-10-10 olivas $
.. $Author: olivas $
.. $Date: 2011-10-10 $

Release Notes
=============

trunk
--------------
- Adding three remaining Gaisser-Hillas fit parameters (a, b, and c) to I3CorsikaShowerInfo.
- Added CROSSTALK_PULSE to I3MCPulse
- New classes for cable shadow:
  * I3Photon
  * I3CompressedPhoton
  * I3ExtraGeometry
  * I3ExtraGeometryItem
  * I3ExtraGeometryItemMove
  * I3ExtraGeometryUnion
  * I3ExtraGeometryCylinder
  * I3CylinderMap


Nov. 12, 2018 Juan Carlos Diaz Velez (juancarlos@icecube.umd.edu)
--------------------------------------------------------------------
Release V02-03-00
* Added variables to I3CorsikaShowerInfo needed to delegate surface 
sampling from corsika reader to a later stage in the simulation chain.

June 20, 2018 Juan Carlos Diaz Velez (juancarlos@icecube.umd.edu)
--------------------------------------------------------------------
Release V02-02-01
* Cleanup of import statements


Nov 3, 2017 Juan Carlos Diaz Velez (juancarlos@icecube.umd.edu)
--------------------------------------------------------------------
Release V02-02-00
* Add support for printing most types



August 27, 2017 Juan Carlos Diaz Velez (juancarlos@icecube.umd.edu)
--------------------------------------------------------------------
Release V02-01-02
* (157482) Fix for exposing of constructors

June 26, 2017 Alex Olivas (olivas@icecube.umd.edu)
--------------------------------------------------------------------
Release V02-01-01

* (r154595) Slimmer I3CompressedPhoton

March 24, 2017 Alex Olivas (olivas@icecube.umd.edu)
--------------------------------------------------------------------
Release V02-01-00

* (r146654) Uses serialization project.
* (r145870) Moved I3Photon and I3CompressedPhoton from clsim to simclasses

April 8, 2016 Meike de With (meike.de.with@desy.de)
--------------------------------------------------------------------

Release V02-00-00
