@@ -40,6 +40,7 @@ void register_I3MCPESeries();
 void register_I3WimpParams();
 void register_I3ParticleIDMap();
 void register_I3CylinderMap();
+void register_I3NuGenInfo();
 
 BOOST_PYTHON_MODULE(simclasses)
 {
@@ -52,6 +53,7 @@ BOOST_PYTHON_MODULE(simclasses)
   register_I3WimpParams();
   register_I3ParticleIDMap();
   register_I3CylinderMap();
+  register_I3NuGenInfo();  
   BOOST_PP_SEQ_FOR_EACH(I3_REGISTER, ~, REGISTER_THESE_THINGS);
 }
 
