@@ -7,6 +7,7 @@ Release Notes
 
 trunk
 --------------
+- Add I3NuGenInfo for use in S-Frame
 - Adding three remaining Gaisser-Hillas fit parameters (a, b, and c) to I3CorsikaShowerInfo.
 - Added CROSSTALK_PULSE to I3MCPulse
 - New classes for cable shadow:
